--- a/index.html
+++ b/index.html
@@ -15,32 +15,15 @@
     <div class="search-container">
         <div class="search">
             <input id="zip-code-input" type="text" placeholder="Enter zip" />
-            <i class="fas fa-search"></i>
+            <i class="fas fa-search" onclick="searchStores()"></i>
         </div>
     </div>
     <div class="stores-list-container">
-        <div class="stores-list">
-            <div class="store-container">
-                <div class="store-info-container">
-                    <div class="store-address">
-                        <span>8480 Beverly Blvd</span>
-                        <span>Los Angeles, CA 90048</span>
-                    </div>
-                    <div class="store-phone-number">
-                        (950) 715-9938
-                    </div>
-                </div>
-                <div class="store-number-container">
-                    <div class="store-number">
-                        1
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div class="stores-list"></div>
     </div>
     <div id="map"></div>
     <script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCcwazb-T7zvceyA4VLWVB-eXvwj-XEUIA&callback=initMap">
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDWD4HOh7GYkhRkXcw4ayO88GanTYyuOgM&callback=initMap">
         </script>
 </body>
 
